*updated readme *added common bot implementation *added common TTS and STT classes *added VA commands and skills *added DataBus *added UartBus *refactoring *added nextion project

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,16 @@
-
 *~
 *.pyc
 *.db
 *.log
 *.pid
 *.lock
-
 log/*
 image.jpg
 plot.png
-
-
 keywords
+database/global.db-journal
+vosk*/*
+sound/*
+wav/*
+*.zip
+model.pt
